# AutoTuneAI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
autotune/: adaptive_search.py  auto_detect.py  hybrid_optimization.py  main_tuner.py  resource_aware.py  sampler_conv.py  search_space.py  search_space_config.py  task_aware.py
autotune/utils/: callbacks.py  logger.py
examples/: requirements.txt
examples/experiments/: exp_cnn.py  exp_lgbm.py  exp_lr.py  exp_rf.py  exp_svm.py  exp_transformer.py
examples/models/: cnn_tf_model.py  transformer_model.py
